--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       position:absolute;
       top:0px;
       width:30px;
+      left:8px;
       //background: #555;
       height: 100%;
       z-index: 99;
@@ -41,7 +42,7 @@
 
     #buttonBody{
       position:absolute;
-      top:-4px;
+      //top:-4px;
       height:28px;
       width:28px;
       border-radius: 50%;
