--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       height:28px;
       width:28px;
       border-radius: 50%;
-      background:#1a1aff;
+      background:#fff;
       z-index: 999;
     }
 
