--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 
     #mainBody{
       position:absolute;
-      top:0px;
+      top:20px;
       width:30px;
-      left:8px;
+      right:8px;
       //background: #555;
       height: 100%;
       z-index: 99;
@@ -60,7 +60,7 @@
     #infoBody{
       z-index: 999;
       position: absolute;
-      left: 20px;
+      right: 40px;
     }
 
   </style>
