--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       font-family: "GeoSans";
       src: url("assets/GeosansLight.ttf");
     }
-    html{ color:#ffc; background:#000; font-family:"GeoSans" }
+    html{ color:#ffc; background:#1010ff; font-family:"GeoSans" }
     body{
       font-size:30px;
       font-family: "Calibre-Thin", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Helmut, Arial, "Lucida Grande", sans-serif;
